superagent for restful interactions

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/tejasmanohar/timgur-scheduler",
   "dependencies": {
     "node-schedule": "^0.1.13",
-    "orchestrate": "^0.3.15"
+    "orchestrate": "^0.3.15",
+    "superagent": "^0.21.0"
   }
 }
