--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "node-schedule": "^0.1.13",
     "orchestrate": "^0.3.15",
-    "superagent": "^0.21.0"
+    "superagent": "^0.21.0",
+    "twilio": "^1.10.0"
   }
 }
