--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/tejasmanohar/timgur-scheduler",
   "dependencies": {
+    "express": "4.10.6",
     "orchestrate": "0.3.15",
     "superagent": "0.21.0",
     "twilio": "1.10.0"
